--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <script src="script.js" type="module"></script>
+<body class="body">
+  <script src="app.js" type="module"></script>
 </body>
 </html>
